--- a/package.json
+++ b/package.json
@@ -9,25 +9,36 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
-		"react": "19.2.0",
-		"react-dom": "19.2.0",
-		"next": "16.0.1",
+		"@coreui/icons": "^3.0.1",
+		"@coreui/icons-react": "^2.3.0",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-slider": "^1.3.6",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.77.0",
 		"@tiptap/react": "^3.9.0",
 		"@tiptap/starter-kit": "^3.9.0",
-		"autoprefixer": "^10.4.21"
+		"autoprefixer": "^10.4.21",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.552.0",
+		"next": "16.0.1",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@netlify/plugin-nextjs": "^5.13.3",
+		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"@tailwindcss/postcss": "^4",
 		"eslint": "^9",
 		"eslint-config-next": "16.0.1",
 		"postcss": "^8.5.6",
 		"tailwindcss": "^4",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5"
 	}
 }
