--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
 		"@coreui/icons-react": "^2.3.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.77.0",
+		"@tiptap/extension-image": "^3.10.1",
+		"@tiptap/extension-link": "^3.10.1",
+		"@tiptap/extension-text-align": "^3.10.1",
+		"@tiptap/extension-underline": "^3.10.1",
 		"@tiptap/react": "^3.9.0",
 		"@tiptap/starter-kit": "^3.9.0",
 		"autoprefixer": "^10.4.21",
