--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@coreui/icons": "^3.0.1",
 		"@coreui/icons-react": "^2.3.0",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.7",
@@ -19,8 +20,12 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.77.0",
+		"@tiptap/extension-blockquote": "^3.10.1",
+		"@tiptap/extension-heading": "^3.10.1",
 		"@tiptap/extension-image": "^3.10.1",
 		"@tiptap/extension-link": "^3.10.1",
+		"@tiptap/extension-list": "^3.10.1",
+		"@tiptap/extension-paragraph": "^3.10.1",
 		"@tiptap/extension-text-align": "^3.10.1",
 		"@tiptap/extension-underline": "^3.10.1",
 		"@tiptap/react": "^3.9.0",
