--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"autoprefixer": "^10.4.21",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.23.24",
 		"lucide-react": "^0.552.0",
 		"next": "16.0.1",
 		"react": "19.2.0",
