--- a/package.json
+++ b/package.json
@@ -16,45 +16,45 @@
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-hover-card": "^1.1.15",
-		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slider": "^1.3.6",
-		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tabs": "^1.1.13",
-		"@supabase/ssr": "^0.7.0",
-		"@supabase/supabase-js": "^2.77.0",
-		"@tiptap/extension-blockquote": "^3.10.1",
-		"@tiptap/extension-heading": "^3.10.1",
-		"@tiptap/extension-image": "^3.10.1",
-		"@tiptap/extension-link": "^3.10.1",
-		"@tiptap/extension-list": "^3.10.1",
-		"@tiptap/extension-paragraph": "^3.10.1",
-		"@tiptap/extension-text-align": "^3.10.1",
-		"@tiptap/extension-underline": "^3.10.1",
-		"@tiptap/react": "^3.9.0",
-		"@tiptap/starter-kit": "^3.9.0",
-		"autoprefixer": "^10.4.21",
+		"@supabase/ssr": "^0.8.0",
+		"@supabase/supabase-js": "^2.87.1",
+		"@tiptap/extension-blockquote": "^3.13.0",
+		"@tiptap/extension-heading": "^3.13.0",
+		"@tiptap/extension-image": "^3.13.0",
+		"@tiptap/extension-link": "^3.13.0",
+		"@tiptap/extension-list": "^3.13.0",
+		"@tiptap/extension-paragraph": "^3.13.0",
+		"@tiptap/extension-text-align": "^3.13.0",
+		"@tiptap/extension-underline": "^3.13.0",
+		"@tiptap/react": "^3.13.0",
+		"@tiptap/starter-kit": "^3.13.0",
+		"autoprefixer": "^10.4.22",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^12.23.24",
-		"lucide-react": "^0.552.0",
-		"next": "^16.0.7",
-		"react": "^19.2.1",
-		"react-dom": "^19.2.1",
-		"resend": "^6.5.2",
-		"tailwind-merge": "^3.3.1"
+		"framer-motion": "^12.23.26",
+		"lucide-react": "^0.561.0",
+		"next": "^16.0.10",
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3",
+		"resend": "^6.6.0",
+		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
-		"@netlify/plugin-nextjs": "^5.13.3",
-		"@tailwindcss/postcss": "^4",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"eslint": "^9",
-		"eslint-config-next": "16.0.1",
+		"@netlify/plugin-nextjs": "^5.15.1",
+		"@tailwindcss/postcss": "^4.1.18",
+		"@types/node": "^25.0.1",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"eslint": "^9.39.1",
+		"eslint-config-next": "^16.0.10",
 		"postcss": "^8.5.6",
-		"tailwindcss": "^4",
+		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5"
+		"typescript": "^5.9.3"
 	}
 }
